# katastrophe

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: compiler.rs  lib.rs  main.rs  util.rs
src/compiler/: bit_width.rs  context.rs  embedded.rs  err.rs  ir.rs  lexis.rs  scope.rs  semantics.rs  syntax.rs
src/compiler/ir/: builtin.rs  err.rs  id.rs  id_generator.rs  instruction.rs  scope.rs  translator.rs
src/compiler/lexis/: err.rs  lexer.rs  text.rs  token.rs
src/compiler/scope/: err.rs
src/compiler/semantics/: err.rs  lvalue_checker.rs  main_function_check.rs  main_function_checker.rs  mutability_checker.rs  type_inferrer.rs
src/compiler/syntax/: ast.rs  err.rs  error.rs  lexer.rs  parser.rs  text.rs  token.rs
src/constants/: common.rs
src/util/: common.rs  either.rs  file.rs  id.rs  pretty_format.rs  reportable_error.rs
static/: builtin.ll
static/test_files/builtin_outside_std/: main.katas
static/test_files/case_mismatch/: main.katas  utils.katas
static/test_files/circular_import/: a.katas  b.katas  main.katas
static/test_files/empty_file_module/: main.katas
static/test_files/fibonacci/: main.katas
static/test_files/hello_world/: main.katas
static/test_files/i8/: main.katas
static/test_files/minimal/: main.katas
static/test_files/missing_package/: main.katas
static/test_files/multi_file/: main.katas  output  utils.katas
static/test_files/self_import/: b.katas  main.katas
test_files/minimal/: main.katas
tests/: integration_test.rs  negative_test.rs
tests/helper/: mod.rs
(+17 files in other folders)
