[package]
name = "katastrophe"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
const_format = "0.2.33"
include_dir = "0.7"
indoc = "2.0.5"
paste = "1.0.14"
rand = "0.8.5"
